
Changelog
=========

4.0.3 (unreleased)
------------------

- Task byline: Use adminUnit abbreviation instead of label for sequence_number display.
  [phgross]


4.0.2 (2014-11-03)
------------------

- Fixed version download, when download confirmation is deactivated.
  [phgross]

- Mail Download: Convert LF to CRLF, to avoid displaing problems in MS Outlook.
  [phgross]

- Fixed UnicodeEncodeError in task link generation.
  [phgross]


4.0.1 (2014-10-27)
------------------

- Harmonize column lengths of groupid and userid columns.
  [phgross]


4.0.0 (2014-10-26)
------------------

- Changes to OGDS [phgross, deiferni]:

  - Replace `ContactInformation` utility with a service implemetation, available as `ogds_service`.
  - Update to latest `opengever.ogds.models` version.

  - Fixed encoding issues in the `EmailContactsAndUsersVocabularyFactory`.


- Replace Clients with OrgUnit/AdminUnit [phgross, deiferni]:

  - Remove one-to-one relationships of `PloneSite` and `Client` by introducting `AdminUnit` and `OrgUnit`.
  - An `AdminUnit` corresponds to one `PloneSite`.
  - An `AdminUnit` has a one-to-many relationship to `OrgUnit`.
  - Add utility functions to access the current `OrgUnit` and `AdminUnit`.
  - Add org-unit selector to switch between the user`s assigned org-units.
  - The oguid now consists of admin-unit-id and IntId.
  - Admin_unit intern `remote_requests` uses now unrestricted traversing.
  - Above changes concern the following functionality:

    - Sharing View
    - OGDS-Vocabularies
    - Default of task `responsible_client`
    - Cross plone-site request authentication
    - Cross plone-site wizards
    - PloneSite referencenumberpart is the admin_unit's abbreviation.


- Setup [phgross, deiferni]:

  - Make sure that inflator content-creation runs after gever setup.
  - Test that we correctly override ftw.inflator setuphandler configuration.
  - Create admin units and org units from generic setup profile.

