@@ -1,0 +1,12 @@
+<?xml version="1.0"?>
+<object name="portal_workflow" meta_type="Plone Workflow Tool">
+
+  <object name="opengever_inbox_workflow" meta_type="Workflow"/>
+
+  <bindings>
+    <type type_id="opengever.inbox.container">
+      <bound-workflow workflow_id="opengever_inbox_workflow"/>
+    </type>
+  </bindings>
+
+</object>
